dnl Process this file with autoconf to produce a configure script.
AC_INIT(matrix2png.c)
#AM_INIT_AUTOMAKE(matrix2png, 0.92)
AM_INIT_AUTOMAKE(matrix2png, 1.0)

AC_PREFIX_DEFAULT(..)

#AC_INIT(text2png.c)
#AM_INIT_AUTOMAKE(text2png, 0.9)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -lgd:
AC_CHECK_LIB(gd, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lpng:
AC_CHECK_LIB(png, main)
dnl Replace `main' with a function in -lz:
AC_CHECK_LIB(z, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strstr strtod)

AC_OUTPUT(Makefile)
